# scopemate

./: .gitattributes  .gitignore  MANIFEST.in  README.md  concept.md  install.bat  install.sh  publish.bat  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
src/scopemate/: __init__.py  breakdown.py  cli.py  core.py  engine.py  interaction.py  llm.py  models.py  storage.py  task_analysis.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_breakdown.py  test_cli.py  test_integration.py  test_interaction.py  test_llm.py  test_markdown_output.py  test_models.py  test_platform.py  test_storage.py  test_task_analysis.py
