[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopemate"
version = "0.1.0"
description = "🪜 A CLI tool for Purpose/Scope/Outcome planning"
readme = "README.md"
authors = [
    {name = "Anoop Thomas Mathew", email = "atmb4u@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "twine>=6.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/atmb4u/scopemate"
"Bug Tracker" = "https://github.com/atmb4u/scopemate/issues"

[project.scripts]
scopemate = "scopemate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scopemate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "llm: marks tests that interact with LLM APIs",
]

[tool.coverage.run]
source = ["scopemate"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # Line length errors handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
